<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/index">

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/main_spravka"
        android:textSize="20sp"
        android:id="@+id/button"
        android:onClick="onClick"
        android:background="@drawable/but2"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/main_playgame"
        android:id="@+id/button2"
        android:onClick="onClick1"
        android:background="@drawable/but2"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/main_nastroiki"
        android:background="@drawable/but2"
        android:id="@+id/button3"
        android:onClick="onClick2"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/main_surprise"
        android:id="@+id/button5"
        android:onClick="onClick4"
        android:background="@drawable/but2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/main_razvlechenie"
        android:id="@+id/button6"
        android:onClick="onClick5"
        android:background="@drawable/but2"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button7"
        android:onClick="onClick6"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
