<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="project.android.ssau.jungleofc.PerfomanceActivity"
    android:background="@drawable/index">

    <TextView
        android:text="@string/perfomance_zadanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ccc"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfomance_programa"
        android:textSize="20sp"
        android:textColor="#ccc"
        android:id="@+id/textView4"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfomance_programa"
        android:textSize="20sp"
        android:textColor="#ccc"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/perfomance_proverka"
        android:id="@+id/button5"
        android:textSize="20sp"
        android:onClick="onClick"
        android:background="@drawable/but2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
